@@ -16,6 +16,7 @@ Process Hacker
    * Fixed file dialog crash in Windows PE environments
    * Fixed Read/Write Address crash
    * Fixed string scanning false positive case
+   * Fixed hang when viewing handle security for certain File objects
 
 2.35
  * NEW/IMPROVED:
